--- a/index.html
+++ b/index.html
@@ -15,9 +15,74 @@
     Logo
     Navigation
 </header>
+<div id="top"></div>
 <main>
     <section>Hero</section>
-    <section>Discography</section>
+    <section class="discography">
+        <h1 class="discography-title">Discography</h1>
+        <div class="projects">
+            <div class="project">
+                <img src="./img/inshallah.png" alt="">
+                <div class="project-title">
+                    INSHALLAH: LOCKWOOD AVE -(EP)
+                </div>
+                <div class="project-info">
+                    <a class="project-info-link" href="https://music.apple.com/us/album/inshallah-lockwood-ave/1568067160"target="_blank"><img src="./img/applemusic.svg" width="50"
+                        height="50" alt=""></a>
+                    <a class="project-info-link" href="https://open.spotify.com/album/4EWOxPvIKm3FaFy0EqCT8D?si=hHE85V0dT1CT9rPOInmSHQ"target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
+                    <a class="project-info-link" href="https://www.youtube.com/playlist?list=OLAK5uy_mdt0KS0hqPkm-lSqQiBNb-_NT6ymoDsqc"target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./img/midnight.png" alt="">
+                <div class="project-title">
+                    MIDNIGHT-(SINGLE)
+                </div>
+                <div class="project-info">
+                    <a class="project-info-link" href="https://music.apple.com/us/album/midnight-feat-kryoko-single/1593710216"target="_blank"><img src="./img/applemusic.svg" width="50"
+                        height="50" alt=""></a>
+                    <a class="project-info-link" href="https://open.spotify.com/album/6Hfla6bA9C3NMzda9SzK6c?si=2A1gqbrBTbq63zdFt9FAOw"target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
+                    <a class="project-info-link" href="https://www.youtube.com/watch?v=Pv0GLkmjFbA"target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./img/havana.png" alt="">
+                <div class="project-title">
+                    HAVANA - (SINGLE BY KRYOKO)
+                </div>
+                <div class="project-info">
+                    <a class="project-info-link" href="https://music.apple.com/us/album/havana-feat-bigbodysam-single/1576754068"target="_blank"><img src="./img/applemusic.svg" width="50"
+                        height="50" alt=""></a>
+                    <a class="project-info-link" href="https://open.spotify.com/album/189PDYP8Iu813kZYsZx3qj?si=Fe5MjvNVTWKBlkS1uAbd-Q"target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
+                    <a class="project-info-link" href="https://www.youtube.com/watch?v=LUZvz9PnymI"target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./img/Big Body Sam-4.png" alt="">
+                <div class="project-title">
+                ON A ROLL - (SINGLE)    
+                </div>
+                <div class="project-info">
+                    <a class="project-info-link" href="https://music.apple.com/us/album/on-a-roll-feat-thiigo/1524590287?i=1524590291"target="_blank"><img src="./img/applemusic.svg" width="50"
+                        height="50" alt=""></a>
+                    <a class="project-info-link" href="https://open.spotify.com/album/11jdXSY6OEickRuSgmXDdJ?si=ZoFKmIekSrGTo8a-N0ZMZg"target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
+                    <a class="project-info-link" href="https://www.youtube.com/watch?v=5cAV7Di8KmU"target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="./img/summervibe.png" alt="">
+                <div class="project-title">
+                    SUMMER VIBE - (FEATURED ON: "COMING UP NEXT!" EP BY THIIGO)
+                </div>
+                <div class="project-info">
+                    <a class="project-info-link" href="https://music.apple.com/us/album/summer-vibe-feat-bigbodysam/1581536687?i=1581536692"target="_blank"><img src="./img/applemusic.svg" width="50"
+                        height="50" alt=""></a>
+                    <a class="project-info-link" href="https://open.spotify.com/track/5fMCiPFAXuc9xLNAd5zxo0?si=9784da16cbaf4a50"target="_blank"><img src="./img/spotify.svg" width="40" height="40" alt=""></a>
+                    <a class="project-info-link" href="https://www.youtube.com/watch?v=97fwk6s9Ktk"target="_blank"><img src="./img/youtube.svg" width="40" height="40" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </section>
     <section>
         <header class="section-heading">
             <h1 class="section-title">About Me</h1>
@@ -51,10 +116,31 @@
             </div>
         </section>
     </section>
-    <section>
+    <section class="portfolio">
         <header class="section-heading">
             <h1 class="section-title">Portfolio</h1>
         </header>
+        <div class="portfolio-projects">
+            <a href="" class="portfolio-project">
+                <img src="https://via.placeholder.com/300/hhh/fff" alt="">
+            </a>
+            <a href="" class="portfolio-project">
+                <img src="https://via.placeholder.com/300" alt="">
+            </a>
+            <a href="" class="portfolio-project">
+                <img src="https://via.placeholder.com/300/hhh/fff" alt="">
+            </a>
+            <a href="" class="portfolio-project">
+                <img src="https://via.placeholder.com/300" alt="">
+            </a>
+            <a href="" class="portfolio-project">
+                <img src="https://via.placeholder.com/300/hhh/fff" alt="">
+            </a>
+            <a href="" class="portfolio-project">
+                <img src="https://via.placeholder.com/300" alt="">
+            </a>
+
+        </div>
     </section>
     <section>
         <header class="section-heading">
@@ -64,9 +150,10 @@
     </section>
 </main>
 <footer>
-    Back to the top
-    Social Media Links
-    Copyright
+  <a class="footer-top-link" href="#top">
+   <img src="./img/ic_baseline-double-arrow.svg" alt=""> Back to the top
+</a>
+    <div class="footer-copyright">@2022 BIGBODYENTERTAINMENT All Rights Reserved.</div>
 </footer>
 </body>
 </html>
