--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="nav">
                 <ul class="navul">
                     <li>
-                        <a href="#home">
+                        <a href="#top">
                             Home
                         </a>
                     </li>
