--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                 <div id="bbs">
                      BIGBODYSAM
                 </div>
-                <div>Full-Stack Developer/Musical Genius</div>
+                <div class="hero-content-subtitle">
+                   <a  href="#skills">Full-Stack Developer</a> /
+                   <a href="#discography">Musical Genius</a> 
+                </div>
                 <div>
                 <a class="homeicon" href="https://github.com/samirkhoury98" target="_blank"><img
                         src="./img/4747499_github_icon.svg" width="50" height="50" alt=""></a>
