--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             </div>
         </section>
         <section id="contactme">
-            <div id="particles-js"></div>
+            <div id="particles-forms-js"></div>
             <header class="section-heading">
                 <h1 class="section-title">Contact ME</h1>
             </header>
