--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/mobile.css" media="only screen and (max-width: 767px)">
 </head>
 
 <body>
@@ -68,6 +69,8 @@
                 <div>
                 <a class="homeicon" href="https://github.com/samirkhoury98" target="_blank"><img
                         src="./img/4747499_github_icon.svg" width="50" height="50" alt=""></a>
+                        <a class="homeicon" href="#contactme"><img
+                            src="./img/Designer/developer/Vector.svg" width="50" height="50" alt=""></a>
                         </div>
             </div>
         </section>
@@ -161,6 +164,19 @@
             <header class="section-heading">
                 <h1 class="section-title">About Me</h1>
             </header>
+            <div>
+                <div>
+
+                </div>
+                <div>
+                    <div>
+
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="skills" class="skills">
             <header class="section-heading">
