--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 
                     </div>
                     <div>
-
+                        <h3>DEVELOPMENT</h3>
+                        <P>I LEARNED FRONT-END AND BACK-END DEVELOPMENT AT THE LearnAcademy BASED IN SAN DIEGO, CALIFORNIA AND I GRADUATED WITH FULL-STACK STATUS IN THE SUMMER OF '22</P>
                     </div>
                 </div>
             </div>
