--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <p>LEAVE YOUR NAME, NUMBER AND EMAIL ALONG WITH A MESSAGE! I’LL GET BACK TO YOU AS SOON AS I CAN!</p>
             <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
                 <input type="text" name="fullName" placeholder="Full Name" />
-                <input type="email" name="email" placeholder="Email:"/>
+                <input type="email" name="email" placeholder="Email:" required="@">
                 <input type="tel" name="phoneNumber" placeholder="Phone Number:"/>
                 <textarea name="message" placeholder="Message:"></textarea> 
                 
