--- a/index.html
+++ b/index.html
@@ -253,10 +253,10 @@
         <div class="form-element">
             <p>LEAVE YOUR NAME, NUMBER AND EMAIL ALONG WITH A MESSAGE! I’LL GET BACK TO YOU AS SOON AS I CAN!</p>
             <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
-                <input type="text" name="fullName" placeholder="Full Name" />
+                <input type="text" name="fullName" placeholder="Full Name" required />
                 <input type="email" name="email" placeholder="Email:" required="@">
                 <input type="tel" name="phoneNumber" placeholder="Phone Number:"/>
-                <textarea name="message" placeholder="Message:"></textarea> 
+                <textarea name="message" placeholder="Message:" required></textarea> 
                 
                <div class="form-submit"><button id="my-form-button">Submit</button></div> 
 
