--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
             <section class="section-subset">
                 <h2 class="section-subset-title">Learning:</h2>
                 <div class="section-subset-content">
-                    <div class="section-subset-item2"><img src="./img/rails_icon.svg" alt=""><span
+                    <div class="section-subset-item"><img src="./img/rails_icon.svg" alt=""><span
                             class="section-subset-item-title">RAILS</span></div>
-                    <div class="section-subset-item2"><img src="./img/postgresql-icon.svg" alt=""><span
+                    <div class="section-subset-item"><img src="./img/postgresql-icon.svg" alt=""><span
                             class="section-subset-item-title">POSTGRESQL</span></div>
-                    <div class="section-subset-item2"><img src="./img/Vector.svg" alt=""><span
+                    <div class="section-subset-item"><img src="./img/Vector.svg" alt=""><span
                             class="section-subset-item-title">?</span></div>
-                    <div class="section-subset-item2"><img src="./img/Vector.svg" alt=""><span
+                    <div class="section-subset-item"><img src="./img/Vector.svg" alt=""><span
                             class="section-subset-item-title">?</span></div>
 
                 </div>
