--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <body>
     <header class="header">
-        <div class="header-inner"><img src="./img/wheatlogo.png" alt="">
+        <div class="header-inner"><img class="logo" src="./img/wheatlogo.png" alt=""> 
+            <span class="mobile-menu"><img class="menu-icon" src="./img/wheatham.svg" alt=""><img class="menu-close-icon" src="./img/wheatx_icon 1.svg" alt=""></span>
             <nav class="nav">
                 <ul class="navul">
                     <li>
