--- a/index.html
+++ b/index.html
@@ -63,10 +63,13 @@
             <div id="particles-js"></div>
             <div class="hero-content">
                 <div class="bbs bbs--first show">
-                    BIGBODYSAM
+                    I AM BIGBODYSAM
                 </div>
                 <div class="bbs bbs--second">
-                    SAMIR KHOURY
+                    I AM SAMIR KHOURY
+                </div>
+                <div class="bbs bbs--third">
+                    I AM HAPPY YOU'RE HERE
                 </div>
                 <div class="hero-content-subtitle">
                     <a class="shine" href="#skills">Full-Stack Developer</a> /
@@ -258,15 +261,15 @@
             </header>
             <div class="swiper swiper-portfolio">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
-                  <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
-                  <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
-                  <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
-                  <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
-                  <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300/hhh/fff" alt=""></div>
+                    <div class="swiper-slide"><img src="https://via.placeholder.com/300" alt=""></div>
                 </div>
                 <div class="swiper-pagination"></div>
-              </div>
+            </div>
         </section>
         <section id="contactme">
             <div id="particles-forms-js"></div>
