--- a/index.html
+++ b/index.html
@@ -62,15 +62,9 @@
         <section class="hero">
             <div id="particles-js"></div>
             <div class="hero-content">
-                <div class="bbs bbs--first show">
-                    I AM BIGBODYSAM
-                </div>
-                <div class="bbs bbs--second">
-                    I AM SAMIR KHOURY
-                </div>
-                <div class="bbs bbs--third">
-                    I AM HAPPY YOU'RE HERE
-                </div>
+                <p class="content first">
+                    I am <span class="typewrite"> SAMIR KHOURY</span>
+                </p>
                 <div class="hero-content-subtitle">
                     <a class="shine" href="#skills">Full-Stack Developer</a> /
                     <a class="shine" href="#discography">Musical Genius</a>
