--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <section class="hero">
             <div id="particles-js"></div>
             <div class="hero-content">
-                <p class="content first">
-                    I am <span class="typewrite"> SAMIR KHOURY</span>
-                </p>
+                <div class="content first">
+                    <div>I am</div> <span class="typewrite"> SAMIR KHOURY</span>
+                </div>
                 <div class="hero-content-subtitle">
                     <a class="shine" href="#skills">Full-Stack Developer</a> /
                     <a class="shine" href="#discography">Musical Genius</a>
