--- a/index.html
+++ b/index.html
@@ -207,9 +207,23 @@
 
                     </div>
                     <div class="aboutmedev">
-                        <h3>DEVELOPMENT</h3>
-                        <P>I LEARNED FRONT-END AND BACK-END DEVELOPMENT AT THE LearnAcademy BASED IN SAN DIEGO,
-                            CALIFORNIA AND I GRADUATED WITH FULL-STACK STATUS IN THE SUMMER OF '22</P>
+                        <img class="face" src="./img/101531321.jpeg" alt="">
+
+                        <h3>DEVELOPMENT:</h3>
+                        <p>I Learned Front-End And Back-End Development At The LearnAcademy Based In San Diego,
+                            California And I Earned The Status Of Full-Stack Developer In The Spring Of '22</p>
+
+                        <h3>TRASNFERABLE SKILLS:</h3>
+                        <p>Genuine and productive critical thinking and problem-solving cannot exist in the absence of
+                            creativity. Being creative is having the ability to think differently than others and being
+                            able to see things from multiple perspectives at a time. Outside of growing my passion as a
+                            developer, I spend a majority of my time writing and recording music. As you could imagine,
+                            creating music requires a certain level of creativity and adaptability as well. During the
+                            pursuit of my love for creating music, I have trained myself to be familiar with different
+                            types of audio softwares in a short amount of time. As a developer, creativity is a
+                            requirement for efficient, dynamic, and adaptable code. So many instances in coding and
+                            development calls for efficient critical-thinking and the more practice I have with one
+                            passion the better I become with the other. </p>
                     </div>
                 </div>
             </div>
