--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <div>I am</div> <span class="typewrite"> SAMIR KHOURY</span>
                 </div>
                 <div class="hero-content-subtitle">
-                    <a class="shine" href="#skills">Full-Stack Developer</a> /
-                    <a class="shine" href="#discography">Musical Genius</a>
+                    <a class="shine-full-stack shine" href="#skills">Full-Stack Developer</a> /
+                    <a class="shine-music" href="#discography">Musical Genius</a>
                 </div>
                 <div>
                     <a class="homeicon" href="https://github.com/samirkhoury98" target="_blank"><svg
