enter the dark realm

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </svg>
     <header class="header">
         <div class="header-inner">
-            <button class="btn-toggle">Toggle Dark Mode</button>
+            <button class="btn-toggle">Enter the dark realm</button>
             <div class="header-top">
                 <img class="logo" src="./img/wheatlogo.png" alt="">
                 <span class="mobile-menu"><img class="menu-icon" src="./img/wheatham.svg" alt=""><img
