--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <p>I Learned Front-End And Back-End Development At The LearnAcademy Based In San Diego,
                             California And I Earned The Status Of Full-Stack Developer In The Spring Of '22</p>
 
-                        <h3>TRASNFERABLE SKILLS:</h3>
+                        <h3>TRANSFERABLE SKILL:</h3>
                         <p>Genuine and productive critical thinking and problem-solving cannot exist in the absence of
                             creativity. Being creative is having the ability to think differently than others and being
                             able to see things from multiple perspectives at a time. Outside of growing my passion as a
@@ -323,7 +323,8 @@
             <div class="form-element">
                 <p>LEAVE YOUR NAME, NUMBER AND EMAIL ALONG WITH A MESSAGE! I’LL GET BACK TO YOU AS SOON AS I CAN!</p>
                 <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
-                    <input type="text" name="fullName" placeholder="Full Name" required />
+
+                    <input aria-labelledby="FULL NAME" type="text" name="fullName" placeholder="Full Name" required />
                     <input type="email" name="email" placeholder="Email:" required="@">
                     <input type="tel" name="phoneNumber" placeholder="Phone Number:" required="number" />
                     <textarea name="message" placeholder="Message:" required></textarea>
