--- a/index.html
+++ b/index.html
@@ -325,9 +325,10 @@
                 <form id="my-form" action="https://formspree.io/f/mwkywogz" method="POST">
 
                     <input aria-labelledby="FULL NAME" type="text" name="fullName" placeholder="Full Name" required />
-                    <input type="email" name="email" placeholder="Email:" required="@">
-                    <input type="tel" name="phoneNumber" placeholder="Phone Number:" required="number" />
-                    <textarea name="message" placeholder="Message:" required></textarea>
+                    <input aria-labelledby="EMAIL" type="email" name="email" placeholder="Email:" required="@">
+                    <input aria-labelledby="PHONE NUMBER" type="tel" name="phoneNumber" placeholder="Phone Number:"
+                        required="number" />
+                    <textarea aria-labelledby="MESSAGE" name="message" placeholder="Message:" required></textarea>
 
                     <div class="form-submit"><button id="my-form-button">Submit</button></div>
 
