--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
         </section>
         <section id="discography" class="discography">
-            <h1 class="discography-title">Discography</h1>
+            <h1 class="discography-title">DISCOGRAPHY</h1>
 
 
             <!-- Slider main container -->
